# better-posthog-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.changes/: README.md  before-send.md  client-options.md  config.json  dependency-updates.md  disable-tauri-default-features.md  identity-validation.md  init-options-fix.md  initial-release.md  logging.md  tauri-plugin-bump.md
.github/: dependabot.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: cache-cleanup.yml  ci.yml  combine-prs.yml
better-posthog/: CHANGELOG.md  Cargo.toml  README.md
better-posthog/src/: client.rs  context.rs  lib.rs  worker.rs
better_posthog/: Cargo.toml  README.md
better_posthog/src/: client.rs  events.rs  lib.rs  worker.rs
tauri-plugin-better-posthog/: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  rollup.config.js
tauri-plugin-better-posthog/examples/tauri-app/: index.html  package.json  vite.config.ts
tauri-plugin-better-posthog/examples/tauri-app/src/: App.vue
tauri-plugin-better-posthog/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-better-posthog/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-better-posthog/examples/tauri-app/src-tauri/src/: main.rs
tauri-plugin-better-posthog/examples/tauri-app/src/composables/: index.ts  usePostHog.ts
tauri-plugin-better-posthog/guest-js/: index.ts
tauri-plugin-better-posthog/permissions/: default.toml
tauri-plugin-better-posthog/permissions/autogenerated/: reference.md
tauri-plugin-better-posthog/permissions/autogenerated/commands/: capture.toml
tauri-plugin-better-posthog/permissions/schemas/: schema.json
tauri-plugin-better-posthog/src/: commands.rs  identity.rs  lib.rs  state.rs
