[package]
name = "better-posthog"
version = "0.2.1"
description = "An ergonomic Rust SDK for PostHog"
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v7"] }
os_info = "3.14.0"
log = "0.4.29"
semver = "1.0.27"
