[package]
name = "better-posthog"
version = "0.2.5"
description = "An ergonomic Rust SDK for PostHog"
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v7"] }
os_info = "3.14"
log = "0.4"
semver = "1.0"
