[package]
name = "tauri-plugin-better-posthog"
version = "0.1.4"
description = "Tauri integration with PostHog"
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
links = "tauri-plugin-better-posthog"

[lints]
workspace = true

[build-dependencies]
tauri-plugin = { version = "2.5", features = ["build"] }

[dependencies]
tauri = { version = "2.10", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
uuid = { version = "1.22.0", features = ["v4", "v7"] }
better-posthog = { workspace = true }
