[package]
name = "tauri-app"
edition = { workspace = true }

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-better-posthog = { workspace = true }
better-posthog = { workspace = true }
log = "0.4.29"
