[package]
name = "tauri-app"
edition = { workspace = true }

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-better-posthog = { workspace = true }
better-posthog = { workspace = true }
log = "0.4.29"
fastrand = "2.3.0"
